1.2.5i6:
    Core & Setup:
    * 1008 Overall check timeout for Check_MK checks now defaults to CRIT state...

    Checks & Agents:
    * 0185 knuerr_rms_humidity, knuerr_rms_temp: Two new Checks to Monitor the Temperature and the Humidity on Knürr RMS Devices
    * 1065 heartbeat_crm / heartbeat_crm.resources: Rewrote checks / formalized parameters...
    * 1068 livedump: Added optional check interval (detect staleness) / option to encrypt mails...
    * 1093 windows agent: performance counter can now be specified by name...
    * 0189 docsis_channels: Support for Frequency of Downstream Channels for Devices with DOCSIS MIB
    * 0190 docsis_signal_quality: New Check to monitor Signal Qualtiy on Devices with DOCSIS MIB
    * 0193 docsis_cm_status: New Check Status Check for Cable Modems with Docsis MIB.
    * 1070 printer_input/printer_output: New checks to monitor input/output sub-units of printers...
    * 0196 esx_vsphere_hostsystem: New subcheck for maintenance mode...
    * 0197 check_uniserv: New Check for Uniserv Data Management Services...
    * 0199 veeam_client: Check rewritten to get a nicer output
    * 0200 arris_cmts_cpu,arris_cmts_temp: New Checks for Arris CMTS Devices ( Temperature and CPU Utilization)
    * 0202 cisco_temp_sensor: It is now possible to configure this check in WATO....
    * 1172 New check sap.value_groups...
    * 1173 cisco_secure: Check creates now a summary instead one service by port...
            NOTE: Please refer to the migration notes!
    * 1174 rms200_temp: New Temperature check for RMS200 Devices
    * 1175 dell_idrac_disks: New Check for Harddisks using Dell iDrac
    * 0644 adva_fsp_if: instead of lower warning and critical levels check now supports lower and upper levels
            NOTE: Please refer to the migration notes!
    * 1006 printer_pages: add Perf-O-Meter and PNP template
    * 0646 brocade_fcport: the administrative states for which ports are inventorized can now be configured in WATO